samples/_failures_safe/1761600951_3164cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bcdfba76.c: In function ‘main’:
./samples/SAFE/__tmp_bcdfba76.c:142:5: error: expected expression at end of input
  142 |     if (len > 0 && input[len - 1] == '\n')
      |     ^~
./samples/SAFE/__tmp_bcdfba76.c:142:5: error: expected declaration or statement at end of input
